# Autumn

./: .gitignore  README.md  autumn.rosinstall  sdk_launch.txt
autumn_client/: CMakeLists.txt  package.xml
autumn_client/launch/: .autumn_client.launch.swm  .autumn_client.launch.swn  .autumn_client.launch.swo  autumn.launch  autumn_client.launch  autumn_client_throttled.launch
autumn_client/launch/include/: sl_rtabmap.launch.xml
autumn_client/params/: rtabmap.yaml
autumn_drone_control/: CMakeLists.txt  package.xml
autumn_drone_control/include/: autumn_drone_control.h
autumn_drone_control/src/: autumn_drone_control.cpp
autumn_experiments/zed_benchmark/: depth_sensing.py  distancesZED1.csv  distancesZED1.xlsx  distancesZED2.csv  distancesZED2.xlsx
autumn_pathfinding/: CMakeLists.txt  package.xml  package.xml.save  package.xml.save.1
autumn_pathfinding/include/: PathPlanning.h  Point3D.h
autumn_pathfinding/src/: PathPlanning.cpp  Point3D.cpp  main.cpp
autumn_pathfinding_2d/: CMakeLists.txt  package.xml
autumn_pathfinding_2d/include/: PathPlanning.h
autumn_pathfinding_2d/src/: PathPlanning.cpp  main.cpp
autumn_robot/: CMakeLists.txt  package.xml
autumn_robot/launch/: autumn_robot.launch  autumn_robot_throttle.launch  autumn_zed_rgbd_throttle.launch  autumn_zed_stereo_throttle.launch  zed_stereo_throttle.launch
autumn_robot/launch/include/: rtabmap.launch.xml
autumn_robot/params/: rtabmap.yaml
